fix margins on mobile

--- a/css/default.css
+++ b/css/default.css
@@ -372,6 +372,7 @@ label.margin-toggle:not(.sidenote-number) {
 @media (max-width: 760px) {
   body {
     width: 84%;
+    margin: 0;
   }
 
   a.post-title {
